<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:padding="30px"
    android:background="@drawable/cashtray"
    android:id="@+id/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_total"
            android:id="@+id/textView"
            android:textColor="#fefefe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="21dp"
            android:gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="right"
            android:id="@+id/accountingTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="21dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:id="@+id/yenTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="21dp"
            style="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/accountingBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/marubutton"
            android:textColor="#000000"
            android:layout_marginLeft="25dp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_total"
            android:id="@+id/moneyTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#fefefe"
            android:textSize="21dp"
            android:gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="right"
            android:id="@+id/collectMoney"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="21dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:id="@+id/yenTxt2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="21dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:id="@+id/configBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/marubutton"
            android:textColor="#000000"
            android:layout_marginLeft="25dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diff_money"
            android:id="@+id/differenceTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#fefefe"
            android:textSize="21dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/differenceNumTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right"
            android:textColor="#fefefe"
            android:textSize="21dp"
            android:layout_weight="2.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:id="@+id/yenTxt3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fefefe"
            android:textSize="21dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_people"
            android:id="@+id/peopleNumTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="#fefefe"
            android:textSize="21dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/peopleNum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="right"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="21dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:id="@+id/peopleTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fefefe"
            android:textSize="21dp" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WarikanList"
        android:layout_weight="1"
        android:textColor="#0000ff"
        android:background="@drawable/border"
        android:paddingTop="3dp"
        android:paddingBottom="3dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30px">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:background="@drawable/marubutton"
            style="?android:attr/buttonStyleSmall" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:id="@+id/unitTxt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textColor="#fefefe"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:paddingRight="10dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/unitSpinner"
            android:background="@android:drawable/spinner_background"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

    </LinearLayout>
</LinearLayout>