<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:contextClickable="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/accountingTxt"
        android:textSize="67sp"
        android:maxLength="10"
        android:textColor="#ffffff"
        android:background="#484848"
        android:layout_weight="0.15"
        android:textIsSelectable="false"
        android:gravity="center_vertical|right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="7"
            android:id="@+id/sevenBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="8"
            android:id="@+id/eightBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="9"
            android:id="@+id/nineBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="←"
            android:id="@+id/backBtn"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#e67e00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="4"
            android:id="@+id/fourBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="5"
            android:id="@+id/fiveBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="6"
            android:id="@+id/sixBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/minusBtn"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#e67e00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="1"
            android:id="@+id/oneBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="2"
            android:id="@+id/twoBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="3"
            android:id="@+id/threeBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/plusBtn"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#e67e00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="C"
            android:id="@+id/clearBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:textColor="#ff0000"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="0"
            android:id="@+id/zeroBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="00"
            android:id="@+id/zero2Btn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:background="#c9c9c9" />

        <Button
            android:layout_height="match_parent"
            android:text="="
            android:id="@+id/equalBtn"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#e67e00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15">

        <Button
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:id="@+id/okBtn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_width="match_parent"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:background="@drawable/marubutton" />
    </LinearLayout>

</LinearLayout>